designers-toolkit-react/client/main.css
/* ... */
.cardBtn {
  border-radius:300px;
  background-color:white;
  border-color:black;
  padding:3px;
  width:70%;
  transition: 0.3s;
}

.cardBtn:hover{
  background-color: #B8D0EB;
  color: white;
}

.circle {
  background: lightblue;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin-left:0px;
 
}
.circleCol{
  padding:1px;
}

.iconCol{
  padding:0px;
}

.method-circle{
  background: lightblue;
  border-radius: 50%;
  width: 20px;
  height: 20px;
}

.understand { 
  background: #ABBF4A;
}

.define { 
  background: #85953A;
}

.sketch {
  background: #3076DF;
}

.decide {
  background: #8C3A9D;
}

.prototype{
  background: #FF5F5F;
}

.validate {
  background: #E52525;
}

.none{
  background:rgb(194, 194, 194);
}

.dropDownMenu {
  margin-top:5px;
  background-color: #ffffff ;
  display:inline-block;
  box-shadow: 5px 10px 18px #888888;
  border-radius:5px;
  padding:5px;
  border-style:solid;
  border-color:black;
  position:absolute;
  z-index: 100;

  -webkit-animation: fadein 0.4s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 0.4s; /* Firefox < 16 */
   -ms-animation: fadein 0.4s; /* Internet Explorer */
    -o-animation: fadein 0.4s; /* Opera < 12.1 */
       animation: fadein 0.4s;
}

.phaseBtn{
  
  border-radius:30px;
  margin-bottom:none;
  padding-left:10px;
  padding-right:10px;
  margin-bottom:5px;
  font-size:0px;
  letter-spacing: 0px;
  word-spacing: 0px;
  cursor: pointer;

}

.phaseBtn:hover {

    -webkit-filter: brightness(70%);
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -o-transition: all 1s ease;
    -ms-transition: all 1s ease;
    transition: all 1s ease;
}


.whiteHeader.phase{
  display:inline-block;
  font-size: medium;
  margin:0px;
  padding:0px;
}

.tinyTripleDiamond {
  margin-top:40px;
  margin-bottom:40px;
  width:100%;
  height:60px;
}

.circle.sprint{
  width:25px;
  height:25px;
}

.sprintCol {
  background-color: #ffffff;
  border-left: 3px solid;
  border-left-color: rgb(194, 194, 194);
}

.sprintsContainer{
  margin-top:20px;
}

.triangleLeft2 {
  width: 0px;
  height: 0px;
  border-style: inset;
  border-width: 0px 100px 140px 100px;
  border-color: transparent transparent #007bff transparent;
  float: left;
  transition-duration: 500ms;
}

.triangleLeft2:hover{
  border-width: 0 110px 154px 110px;
  cursor: pointer;
}

.triangleLeft2 p {
  font-size:12px;
  text-align: center;
  top: 50px;
  left: -70px;
  position: relative;
  width: 93px;
  height: 93px;
  margin: 0px;
  transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  -o-transform: rotate(90deg);
}

.triangleLeft {
  width: 0px;
  height: 0px;
  border-style: inset;
  border-width: 0px 100px 140px 100px;
  border-color: transparent transparent #007bff transparent;
  float: left;
  transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -webkit-transform: rotate(270deg);
  -o-transform: rotate(270deg);
  transition-duration: 500ms;
  margin-left:-60px;
}
.triangleLeft:hover{
  border-width: 0 110px 154px 110px;
  cursor: pointer;
}

.triangleLeft p {
  font-size:12px;
  text-align: center;
  top: 50px;
  left: -70px;
  position: relative;
  width: 93px;
  height: 93px;
  margin: 0px;
  transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  -o-transform: rotate(90deg);
}

.triangleRight {
  width: 0px;
  height: 0px;
  border-style: inset;
  border-width: 0 100px 140px 100px;
  border-color: transparent transparent #007bff transparent;
  float: left;
  transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  transition-duration: 500ms;
  margin-left:-60px;
}
.triangleRight:hover{
  border-width: 0 110px 160px 110px;
  cursor: pointer;
}

.triangleRight p {
  font-size:12px;
  text-align: center;
  top: 50px;
  left: -20px;
  position: relative;
  width: 93px;
  height: 93px;
  margin: 0px;
  transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -webkit-transform: rotate(270deg);
  -o-transform: rotate(270deg);
}

.triangleBtn {
  padding:0px;
}

.understandTriangle {
  border-color: transparent transparent #ABBF4A transparent;
}

.defineTriangle {
  border-color: transparent transparent #85953A transparent;
}
.sketchTriangle {
  border-color: transparent transparent #3076DF transparent;
}
.decideTriangle {
  border-color: transparent transparent #8C3A9D transparent;
}
.prototypeTriangle {
  border-color: transparent transparent #FF5F5F transparent;
}
.validateTriangle {
  border-color: transparent transparent #E52525 transparent;
}

.diamondContainer { 
  padding-top:50px;
  padding-bottom:50px;
  align-items: center;
}

.understandTriangle.understandLock {
  border-width: 0 110px 160px 110px;
}

.defineTriangle.defineLock {
  border-width: 0 110px 160px 110px;
}

.sketchTriangle.sketchLock {
  border-width: 0 110px 160px 110px;
}

.decideTriangle.decideLock {
  border-width: 0 110px 160px 110px;
}

.prototypeTriangle.prototypeLock {
  border-width: 0 110px 160px 110px;
}

.validateTriangle.validateLock {
  border-width: 0 110px 160px 110px;
}

.pageContainer {
  margin-bottom:200px;
}

@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}
.methodDescriptionPanel{
  width: 1253px;
  background-color: white;
  float: right;
}
/* ... */

